--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
+    "dev:fast": "cross-env FAST_DEV=true next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "analyze": "cross-env ANALYZE=true next build",
+    "build:prod": "cross-env NODE_ENV=production next build",
+    "postinstall": "patch-package",
+    "clean": "rimraf .next .turbo node_modules/.cache",
+    "dev:clean": "npm run clean && npm run dev"
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
@@ -40,6 +46,7 @@
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "date-fns": "^3.6.0",
     "firebase": "^11.3.0",
     "framer-motion": "^11.3.19",
@@ -58,11 +65,19 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@next/bundle-analyzer": "^15.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.18",
+    "compression-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^6.0.5",
     "genkit-cli": "^1.6.1",
     "postcss": "^8",
+    "postcss-import": "^16.0.1",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
